// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React Core should render container and children with item wrapper 1`] = `
<body>
  <div>
    <div
      class="craft-root"
    >
      <div
        class="flex-container"
        data-craft-uid="0"
      >
        <div
          class="flex-container-item"
          data-item-uid="1"
        >
          <div
            class="text"
            data-craft-uid="1"
          >
            <b>
              Hello
            </b>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`React Core should render default error boundary component 1`] = `
<body>
  <div>
    <div
      class="craft-root"
    >
      <div
        data-error-craft-uid="0"
      >
        RENDER ERROR
      </div>
    </div>
  </div>
</body>
`;

exports[`React Core should render successfully 1`] = `
<body>
  <div>
    <div
      class="craft-root"
    >
      <div
        class="component-a"
        data-craft-uid="0"
      >
        <b>
          Component A: 
          1
        </b>
        <div
          class="component-a-children"
        >
          <div
            class="component-b"
            data-craft-uid="1"
          >
            <b>
              Component B: 
              2
            </b>
            <div
              class="component-b-children"
            >
              <div
                class="component-c"
                data-craft-uid="2"
              >
                <b>
                  Component C: 
                  3
                </b>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
